feat: Action PR comment - add size limitation to uploaded file
